--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   ],
   "scripts": {
     "develop": "gatsby develop",
-    "build": "gatsby build"
+    "build": "gatsby build",
+    "serve": "npx serve public"
   },
   "peerDependencies": {
     "gatsby": "^2.23.3",
